force-app/main/default/objects/Product2/fields/Categoria__c.field-meta.xml
<CustomField>
    <fullName>Categoria__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Categoría</label>
    <referenceTo>Categoria__c</referenceTo>
    <relationshipLabel>Products</relationshipLabel>
    <relationshipName>Products</relationshipName>
    <type>Lookup</type>
</CustomField>