force-app/main/default/objects/Product2/fields/Codigo__c.field-meta.xml
<CustomField>
    <fullName>Codigo__c</fullName>
    <description>Código correspondiente al producto SKU</description>
    <inlineHelpText>SKU</inlineHelpText>
    <label>SKU</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>