force-app/main/default/objects/Product2/fields/Codigo_Identificador__c.field-meta.xml
<CustomField>
    <fullName>Codigo_Identificador__c</fullName>
    <description>Código que permite identificar cada producto (SKU) según la unidad de medida del mismo</description>
    <externalId>true</externalId>
    <label>Código Identificador del producto</label>
    <length>30</length>
    <type>Text</type>
</CustomField>