force-app/main/default/objects/Product2/fields/D_as_m_ximo_de_descuento__c.field-meta.xml
<CustomField>
    <fullName>D_as_m_ximo_de_descuento__c</fullName>
    <description>Cantidad de días máximos de vigencia del descuento otorgado</description>
    <label>Días máximo de descuento</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>