force-app/main/default/objects/Product2/fields/Descripci_n_Larga__c.field-meta.xml
<CustomField>
    <fullName>Descripci_n_Larga__c</fullName>
    <label>Descripción Larga</label>
    <type>TextArea</type>
</CustomField>