force-app/main/default/objects/Product2/fields/Descripcion_UMV__c.field-meta.xml
<CustomField>
    <fullName>Descripcion_UMV__c</fullName>
    <description>Descripción de unidad de medida</description>
    <label>Descripción UMV del producto</label>
    <length>80</length>
    <type>Text</type>
</CustomField>