force-app/main/default/objects/Product2/fields/Descuento_Autonomo_de_Asesor__c.field-meta.xml
<CustomField>
    <fullName>Descuento_Autonomo_de_Asesor__c</fullName>
    <label>Descuento Autónomo de Asesor</label>
    <precision>13</precision>
    <scale>3</scale>
    <type>Percent</type>
</CustomField>