force-app/main/default/objects/Product2/fields/Descuento_Autonomo_SubGerente__c.field-meta.xml
<CustomField>
    <fullName>Descuento_Autonomo_SubGerente__c</fullName>
    <label>Descuento Autonomo SubGerente</label>
    <precision>13</precision>
    <scale>3</scale>
    <type>Percent</type>
</CustomField>