force-app/main/default/objects/Product2/fields/Estado_de_Precio__c.field-meta.xml
<CustomField>
    <fullName>Estado_de_Precio__c</fullName>
    <label>Estado de Precio</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Mantiene</fullName>
            </value>
            <value>
                <fullName>Hasta agotar stock</fullName>
            </value>
            <value>
                <fullName>Alza</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>