force-app/main/default/objects/Product2/fields/Familia__c.field-meta.xml
<CustomField>
    <fullName>Familia__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Familia</label>
    <referenceTo>Familia__c</referenceTo>
    <relationshipLabel>Products</relationshipLabel>
    <relationshipName>Products</relationshipName>
    <type>Lookup</type>
</CustomField>