force-app/main/default/objects/Product2/fields/Fecha_maxima_de_descuento__c.field-meta.xml
<CustomField>
    <fullName>Fecha_maxima_de_descuento__c</fullName>
    <label>Fecha máxima de descuento</label>
    <type>Date</type>
</CustomField>