force-app/main/default/objects/Product2/fields/FT__c.field-meta.xml
<CustomField>
    <fullName>FT__c</fullName>
    <label>FT</label>
    <type>Url</type>
</CustomField>