force-app/main/default/objects/Product2/fields/Origen__c.field-meta.xml
<CustomField>
    <fullName>Origen__c</fullName>
    <label>Origen</label>
    <length>50</length>
    <type>Text</type>
</CustomField>