force-app/main/default/objects/Product2/fields/Peso__c.field-meta.xml
<CustomField>
    <fullName>Peso__c</fullName>
    <description>Peso del Producto por Kg</description>
    <inlineHelpText>Peso por KG</inlineHelpText>
    <label>Peso</label>
    <precision>13</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>