force-app/main/default/objects/Product2/fields/Precio_de_Lista__c.field-meta.xml
<CustomField>
    <fullName>Precio_de_Lista__c</fullName>
    <label>Precio de Lista</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>