force-app/main/default/objects/Product2/fields/Precio_lista__c.field-meta.xml
<CustomField>
    <fullName>Precio_lista__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Precio de lista</label>
    <referenceTo>Precios__c</referenceTo>
    <relationshipLabel>Products</relationshipLabel>
    <relationshipName>Products</relationshipName>
    <type>Lookup</type>
</CustomField>