force-app/main/default/objects/Product2/fields/Precio_por_UMV__c.field-meta.xml
<CustomField>
    <fullName>Precio_por_UMV__c</fullName>
    <label>Precio por UMV</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>