force-app/main/default/objects/Product2/fields/Precio_por_Unidad__c.field-meta.xml
<CustomField>
    <fullName>Precio_por_Unidad__c</fullName>
    <label>Precio por Unidad</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>