force-app/main/default/objects/Product2/fields/SKU_mas_UMV__c.field-meta.xml
<CustomField>
    <fullName>SKU_mas_UMV__c</fullName>
    <formula>TextoUMV__c  &amp; &apos; &apos; &amp;  Codigo__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SKU mas UMV</label>
    <type>Text</type>
</CustomField>