force-app/main/default/objects/Product2/fields/Sub_gerente_de_categoria_responsable__c.field-meta.xml
<CustomField>
    <fullName>Sub_gerente_de_categoria_responsable__c</fullName>
    <label>Sub gerente de categoría responsable</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>F1 Beatriz Carracedo</fullName>
            </value>
            <value>
                <fullName>F2 Bernardita Undurra</fullName>
            </value>
            <value>
                <fullName>F3 Marlene Schwaner</fullName>
            </value>
            <value>
                <fullName>F4 Myriam Garin</fullName>
            </value>
            <value>
                <fullName>F5 Miguel Abarca</fullName>
            </value>
            <value>
                <fullName>F6 Pablo Auad</fullName>
            </value>
            <value>
                <fullName>F7 Rodrigo Guajardo</fullName>
            </value>
            <value>
                <fullName>F8 María de los Ángeles Quiróz</fullName>
            </value>
            <value>
                <fullName>F9 María Sol Giuffrida</fullName>
            </value>
            <value>
                <fullName>I1 Tatiana Gonzalez</fullName>
            </value>
            <value>
                <fullName>I2 Matias Rebolledo</fullName>
            </value>
            <value>
                <fullName>I3 Camila Ojeda</fullName>
            </value>
            <value>
                <fullName>I4 Ariel Glasner</fullName>
            </value>
            <value>
                <fullName>I5 Sofia Daly</fullName>
            </value>
            <value>
                <fullName>NO No enviar a Palm</fullName>
            </value>
            <value>
                <fullName>PLM Enviar a Palm</fullName>
            </value>
            <value>
                <fullName>aa</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>