force-app/main/default/objects/Product2/fields/Temperatura__c.field-meta.xml
<CustomField>
    <fullName>Temperatura__c</fullName>
    <label>Temperatura</label>
    <length>50</length>
    <type>Text</type>
</CustomField>