force-app/main/default/objects/Product2/fields/TextoCategoria__c.field-meta.xml
<CustomField>
    <fullName>TextoCategoria__c</fullName>
    <label>Categoría del producto</label>
    <length>80</length>
    <type>Text</type>
</CustomField>