force-app/main/default/objects/Product2/fields/TextoFamilia__c.field-meta.xml
<CustomField>
    <fullName>TextoFamilia__c</fullName>
    <label>Familia del producto</label>
    <length>80</length>
    <type>Text</type>
</CustomField>