force-app/main/default/objects/Product2/fields/TextoUMV__c.field-meta.xml
<CustomField>
    <fullName>TextoUMV__c</fullName>
    <label>UMV del producto</label>
    <length>80</length>
    <type>Text</type>
</CustomField>