force-app/main/default/objects/Product2/fields/UMV__c.field-meta.xml
<CustomField>
    <fullName>UMV__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>UMV</label>
    <referenceTo>Unidad_de_Medida__c</referenceTo>
    <relationshipLabel>Products</relationshipLabel>
    <relationshipName>Products</relationshipName>
    <type>Lookup</type>
</CustomField>