force-app/main/default/objects/Product2/fields/Unidad_de_Peso_Neto__c.field-meta.xml
<CustomField>
    <fullName>Unidad_de_Peso_Neto__c</fullName>
    <label>Unidad de Peso Neto</label>
    <type>TextArea</type>
</CustomField>