force-app/main/default/objects/Product2/fields/Visible_For_Sales__c.field-meta.xml
<CustomField>
    <fullName>Visible_For_Sales__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Visible para Ventas</label>
    <type>Checkbox</type>
</CustomField>