force-app/main/default/objects/Product2/listViews/AllProducts.listView-meta.xml
<ListView>
    <fullName>AllProducts</fullName>
    <columns>PRODUCT2.NAME</columns>
    <columns>UMV__c</columns>
    <columns>Codigo__c</columns>
    <columns>PRODUCT2.CREATED_DATE</columns>
    <columns>PRODUCT2.LAST_UPDATE</columns>
    <columns>Codigo_Identificador__c</columns>
    <columns>Descuento_Autonomo_de_Asesor__c</columns>
    <columns>Descuento_Autonomo_de_Mediocampo__c</columns>
    <columns>Fecha_maxima_de_descuento__c</columns>
    <columns>Peso__c</columns>
    <columns>Visible_For_Sales__c</columns>
    <columns>Sub_gerente_de_categoria_responsable__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PRODUCT2.ACTIVE</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Todos los productos</label>
</ListView>